--- a/index.html
+++ b/index.html
@@ -6,44 +6,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Money Money Money</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/540dd4dd33.js" crossorigin="anonymous"></script>
+    <!-- css stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <h1 class="text-center text-secondary">Money Machine</h1>
+    <header class="mt-4">
+        <h1 class="text-center text-secondary">Money Machine <i class="fa-solid fa-hand-holding-dollar"></i></h1>
     </header>
 
-    <body>
+    <body class="container">
+        <div class="row gx-5">
+            <div class="col-lg-6 col-12">
+                <img class="img-fluid" src="images/9017.png" alt="">
+            </div>
+            <div class="col-lg-6 col-12">
+                <h3 class="text-center mb-3">Income</h3>
+                <div class="d-flex mb-4 justify-content-center">
 
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <img src="images/9017.png" alt="">
+                    <p class="mb-0 income">Income:</p>
+
+
+                    <input type="number" name="" id="">
+
                 </div>
-                <div class="col">
-                    <div>
-                        <h3>Income</h3>
-                        <div>
-                            <p class="d-inline">Income:</p>
-                            <input class="d-inline" type="number" name="" id="">
-                        </div>
-                        <h3>Expenses</h3>
-                        <div>
-                            <p class="d-inline pe-3">Food:</p>
-                            <input class="d-inline" type="number" name="" id="">
-                        </div>
-                        <div>
-                            <p class="d-inline">Rent:</p>
-                            <input class="d-inline" type="number" name="" id="">
-                        </div>
-                        <div>
-                            <p class="d-inline">Clothes:</p>
-                            <input class="d-inline" type="number" name="" id="">
-                        </div>
-                    </div>
+                <h3 class="text-center mb-3">Expenses</h3>
+                <div class="d-flex mb-4 justify-content-center">
+
+                    <p class="mb-0 ps-3 expense-name">Food:</p>
+
+
+                    <input type="number" name="" id="">
+
+                </div>
+                <div class="d-flex mb-4 justify-content-center">
+
+                    <p class="mb-0 ps-4 expense-name">Rent:</p>
+
+
+                    <input type="number" name="" id="">
+
+                </div>
+                <div class="d-flex mb-4 justify-content-center">
+
+                    <p class="mb-0 expense-name">Clothes:</p>
+
+
+                    <input type="number" name="" id="">
+
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class=" btn btn-primary rounded py-2 px-5">Calculate</button>
+                </div>
+                <div class="mt-4 text-center">
+                    <h5 class="mb-3">Total Expenses: 5500</h5>
+                    <h5>Balance: 4500</h5>
+                </div>
+                <div class="d-flex justify-content-center align-items-center mt-4">
+                    <p class="m-0 pe-2">Save:</p>
+                    <input type="number" name="" id="">
+                    <p class="m-0 pe-2 ps-2">%</p>
+                    <button class="btn btn-primary rounded  px-2">Save</button>
+                </div>
+                <div class="mt-4 text-center">
+                    <h5 class="mb-3">Saving Amount: 2000</h5>
+                    <h5>Remaining Balance: 2500</h5>
                 </div>
             </div>
         </div>
@@ -51,7 +83,9 @@
     <footer>
 
     </footer>
+    <!-- js script -->
     <script src="js/dom.js"></script>
+    <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
