--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p class="mb-0 income">Income:</p>
 
 
-                    <input type="number" name="" id="">
+                    <input type="number" name="" id="income-input">
 
                 </div>
                 <h3 class="text-center mb-3">Expenses</h3>
@@ -41,7 +41,7 @@
                     <p class="mb-0 ps-3 expense-name">Food:</p>
 
 
-                    <input type="number" name="" id="">
+                    <input type="number" name="" id="food-input">
 
                 </div>
                 <div class="d-flex mb-4 justify-content-center">
@@ -49,7 +49,7 @@
                     <p class="mb-0 ps-4 expense-name">Rent:</p>
 
 
-                    <input type="number" name="" id="">
+                    <input type="number" name="" id="rent-input">
 
                 </div>
                 <div class="d-flex mb-4 justify-content-center">
@@ -57,11 +57,11 @@
                     <p class="mb-0 expense-name">Clothes:</p>
 
 
-                    <input type="number" name="" id="">
+                    <input type="number" name="" id="cloth-input">
 
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button class=" btn btn-primary rounded py-2 px-5">Calculate</button>
+                    <button id="calculate" class=" btn btn-primary rounded py-2 px-5">Calculate</button>
                 </div>
                 <div class="mt-4 text-center">
                     <h5 class="mb-3">Total Expenses: 5500</h5>
@@ -71,7 +71,7 @@
                     <p class="m-0 pe-2">Save:</p>
                     <input type="number" name="" id="">
                     <p class="m-0 pe-2 ps-2">%</p>
-                    <button class="btn btn-primary rounded  px-2">Save</button>
+                    <button id="save" class="btn btn-primary rounded  px-2">Save</button>
                 </div>
                 <div class="mt-4 text-center">
                     <h5 class="mb-3">Saving Amount: 2000</h5>
