--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="mt-4">
+    <header class="mt-4 mb-4">
         <h1 class="text-center text-secondary">Money Machine <i class="fa-solid fa-hand-holding-dollar"></i></h1>
     </header>
 
@@ -25,8 +25,8 @@
             <div class="col-lg-6 col-12">
                 <img class="img-fluid" src="images/9017.png" alt="">
             </div>
-            <div class="col-lg-6 col-12">
-                <h3 class="text-center mb-3">Income</h3>
+            <div class="col-lg-6 col-12 right-column">
+                <h3 class="text-center mb-3 mt-4">Income</h3>
                 <div class="d-flex mb-4 justify-content-center">
 
                     <p class="mb-0 income">Income:</p>
@@ -64,18 +64,18 @@
                     <button id="calculate" class=" btn btn-primary rounded py-2 px-5">Calculate</button>
                 </div>
                 <div class="mt-4 text-center">
-                    <h5 class="mb-3">Total Expenses: 5500</h5>
-                    <h5>Balance: 4500</h5>
+                    <h5 class="mb-3">Total Expenses: <span id="total-expense">00</span> </h5>
+                    <h5>Balance: <span id="balance">00</span> </h5>
                 </div>
                 <div class="d-flex justify-content-center align-items-center mt-4">
                     <p class="m-0 pe-2">Save:</p>
-                    <input type="number" name="" id="">
+                    <input type="number" name="" id="percentage-input">
                     <p class="m-0 pe-2 ps-2">%</p>
                     <button id="save" class="btn btn-primary rounded  px-2">Save</button>
                 </div>
                 <div class="mt-4 text-center">
-                    <h5 class="mb-3">Saving Amount: 2000</h5>
-                    <h5>Remaining Balance: 2500</h5>
+                    <h5 class="mb-3">Saving Amount: <span id="saving-amount">00</span> </h5>
+                    <h5>Remaining Balance: <span id="remaining-balance">00</span></h5>
                 </div>
             </div>
         </div>
