--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
                     <p class="mb-0 income">Income:</p>
 
 
-                    <input type="number" name="" id="income-input">
+                    <input class="ps-2" type="" name="" id="income-input">
 
                 </div>
                 <h3 class="text-center mb-3">Expenses</h3>
+
                 <div class="d-flex mb-4 justify-content-center">
 
                     <p class="mb-0 ps-3 expense-name">Food:</p>
 
 
-                    <input type="number" name="" id="food-input">
+                    <input class="ps-2" type="" name="" id="food-input">
 
                 </div>
                 <div class="d-flex mb-4 justify-content-center">
@@ -49,7 +50,7 @@
                     <p class="mb-0 ps-4 expense-name">Rent:</p>
 
 
-                    <input type="number" name="" id="rent-input">
+                    <input class="ps-2" type="" name="" id="rent-input">
 
                 </div>
                 <div class="d-flex mb-4 justify-content-center">
@@ -57,19 +58,22 @@
                     <p class="mb-0 expense-name">Clothes:</p>
 
 
-                    <input type="number" name="" id="cloth-input">
+                    <input class="ps-2" type="" name="" id="cloth-input">
 
                 </div>
                 <div class="d-flex justify-content-center">
                     <button id="calculate" class=" btn btn-primary rounded py-2 px-5">Calculate</button>
                 </div>
                 <div class="mt-4 text-center">
-                    <h5 class="mb-3">Total Expenses: <span id="total-expense">00</span> </h5>
+                    <h5 class="mb-2">Total Expenses: <span id="total-expense">00</span> </h5>
+                    <p id="error-four" class="text-danger fw-bold text-center error-handling">Your total expense is much
+                        higher than your income
+                    </p>
                     <h5>Balance: <span id="balance">00</span> </h5>
                 </div>
-                <div class="d-flex justify-content-center align-items-center mt-4">
+                <div class="d-flex justify-content-center align-items-center mt-3">
                     <p class="m-0 pe-2">Save:</p>
-                    <input type="number" name="" id="percentage-input">
+                    <input class="ps-2" type="number" name="" id="percentage-input">
                     <p class="m-0 pe-2 ps-2">%</p>
                     <button id="save" class="btn btn-primary rounded  px-2">Save</button>
                 </div>
@@ -79,9 +83,15 @@
                 </div>
             </div>
         </div>
+
     </body>
     <footer>
-
+        <!-- error handling -->
+        <p id="error" class="text-danger fw-bold text-center error-handling">Please enter a positive number!!!</p>
+        <p id="error-two" class="text-danger fw-bold text-center error-handling">Please enter a number!!!</p>
+        <p id="error-three" class="text-danger fw-bold text-center error-handling">Error: You don't have enough money to
+            save.
+        </p>
     </footer>
     <!-- js script -->
     <script src="js/dom.js"></script>
